istio-project2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-project-deployment2
  namespace: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: istio-project
      version: "1.3"
  template:
    metadata:
      labels:
        app: istio-project
        version: "1.3"
    spec:
      containers:
        - image: registry.cn-hangzhou.aliyuncs.com/liuzezhong_repo/istio-project:1.3
          name: istio-project
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: istio-project-service2
  namespace: test
spec:
  selector:
    app: istio-project
    version: "1.3"
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
